--- a/experiments.ipynb
+++ b/experiments.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [
     {
@@ -84,17 +84,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 207,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/michal/Pulpit/jnp_ml/mlenv/lib/python3.5/site-packages/ipykernel_launcher.py:2: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "  \n"
+     ]
+    }
+   ],
    "source": [
     "train_df = df.loc[df['y'] != 'unknown']\n",
+    "train_df['y'] = train_df['y'].map({'no': 0, 'yes': 1})\n",
     "test_df = df.loc[df['y'] == 'unknown']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 209,
    "metadata": {},
    "outputs": [
     {
@@ -127,11 +141,11 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>no</th>\n",
+       "      <th>0</th>\n",
        "      <td>18419</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>yes</th>\n",
+       "      <th>1</th>\n",
        "      <td>2380</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -139,13 +153,13 @@
        "</div>"
       ],
       "text/plain": [
-       "        id\n",
-       "y         \n",
-       "no   18419\n",
-       "yes   2380"
+       "      id\n",
+       "y       \n",
+       "0  18419\n",
+       "1   2380"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 209,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 210,
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +271,7 @@
        "unknown         182"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 210,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -432,69 +446,107 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 296,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
+    "from keras.utils.np_utils import to_categorical\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "\n",
     "\n",
     "def get_year(date):\n",
     "    year_str = date[:4]\n",
     "    year = int(year_str)\n",
     "    return year\n",
     "\n",
+    "def get_categorical(column):\n",
+    "    le = LabelEncoder()\n",
+    "    le.fit(column)\n",
+    "    labeled_column = le.transform(column)\n",
+    "    return to_categorical(labeled_column).T\n",
+    "\n",
     "def get_input_data(df):\n",
-    "    ages = np.array([get_year(contact) - get_year(birth) for contact, birth in\n",
-    "                     zip(df['contact_date'], df['birth_date'])])\n",
-    "    return np.array([ages]).T, np.array(df['y'])"
+    "    ages = np.array([[get_year(contact) - get_year(birth) for contact, birth in\n",
+    "                     zip(df['contact_date'], df['birth_date'])]])\n",
+    "    \n",
+    "    jobs = get_categorical(df['job'])\n",
+    "    education = get_categorical(df['education'])\n",
+    "    marital = get_categorical(df['marital'])\n",
+    "    loan = get_categorical(df['loan'])\n",
+    "    default = get_categorical(df['default'])\n",
+    "    housing = get_categorical(df['housing'])\n",
+    "    contact_years = [get_year(contact) for contact in df['contact_date']]\n",
+    "    contact = get_categorical(contact_years)\n",
+    "    poutcome = get_categorical(df['poutcome'])\n",
+    "    campaign = np.array([df['campaign']])\n",
+    "    previous = np.array([df['previous']])\n",
+    "    contact_type = get_categorical(df['contact'])\n",
+    "        \n",
+    "    return np.concatenate([ages, jobs, education, marital, loan, default, housing, contact, poutcome,\n",
+    "                           campaign, previous, contact_type], axis=0).T, np.array(df['y'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 297,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[33]\n",
-      " [36]\n",
-      " [58]\n",
+      "[[ 33.   0.   1. ...,   1.   1.   0.]\n",
+      " [ 36.   1.   0. ...,   0.   0.   1.]\n",
+      " [ 58.   0.   0. ...,   0.   1.   0.]\n",
       " ..., \n",
-      " [58]\n",
-      " [37]\n",
-      " [29]] ['no' 'no' 'no' ..., 'no' 'no' 'no']\n"
+      " [ 58.   0.   0. ...,   0.   1.   0.]\n",
+      " [ 37.   0.   0. ...,   0.   0.   1.]\n",
+      " [ 29.   1.   0. ...,   0.   1.   0.]] [0 0 0 ..., 0 0 0]\n"
      ]
     }
    ],
    "source": [
-    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.ensemble import RandomForestClassifier, AdaBoostClassifier, ExtraTreesClassifier\n",
     "\n",
-    "classifier = RandomForestClassifier(class_weight='balanced')\n",
-    "X_train, y_train = get_input_data(train_df)\n",
-    "print(X_train, y_train)"
+    "#classifier = RandomForestClassifier(class_weight='balanced')\n",
+    "classifier = AdaBoostClassifier(base_estimator=base)\n",
+    "X, y = get_input_data(train_df)\n",
+    "print(X, y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 280,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "X_train, X_val, y_train, y_val = train_test_split(X, y, test_size=0.2, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 298,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "RandomForestClassifier(bootstrap=True, class_weight='balanced',\n",
+       "AdaBoostClassifier(algorithm='SAMME.R',\n",
+       "          base_estimator=RandomForestClassifier(bootstrap=True, class_weight='balanced',\n",
        "            criterion='gini', max_depth=None, max_features='auto',\n",
        "            max_leaf_nodes=None, min_impurity_decrease=0.0,\n",
        "            min_impurity_split=None, min_samples_leaf=1,\n",
        "            min_samples_split=2, min_weight_fraction_leaf=0.0,\n",
        "            n_estimators=10, n_jobs=1, oob_score=False, random_state=None,\n",
-       "            verbose=0, warm_start=False)"
+       "            verbose=0, warm_start=False),\n",
+       "          learning_rate=1.0, n_estimators=50, random_state=None)"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 298,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -505,7 +557,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 299,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.849519230769\n",
+      "[ 0.05359697  0.0307094   0.070911   ...,  0.01184437  0.02760193\n",
+      "  0.07859799]\n",
+      "[0 0 0 ..., 0 0 0]\n",
+      "0.70191333725\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import roc_auc_score\n",
+    "\n",
+    "print(classifier.score(X_val, y_val))\n",
+    "\n",
+    "y_pred = classifier.predict_proba(X_val)[::, 1]\n",
+    "print(y_pred)\n",
+    "print(y_val)\n",
+    "print(roc_auc_score(y_val, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 294,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -524,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 295,
    "metadata": {},
    "outputs": [
     {
@@ -532,21 +612,28 @@
      "output_type": "stream",
      "text": [
       "id,y\r\n",
-      "2,0.4936496416243267\r\n",
-      "4,0.40885558836645464\r\n",
-      "5,0.46670458555999056\r\n",
-      "7,0.5637336969834605\r\n",
-      "10,0.5444788722692732\r\n",
-      "12,0.5444788722692732\r\n",
-      "14,0.4936496416243267\r\n",
-      "16,0.47730806481192856\r\n",
-      "18,0.4093685196913506\r\n"
+      "2,0.11032912546221481\r\n",
+      "4,0.16127864972142605\r\n",
+      "5,0.16133373870247456\r\n",
+      "7,0.3172618292260777\r\n",
+      "10,0.5121092606583669\r\n",
+      "12,0.5121092606583669\r\n",
+      "14,0.10295645195520924\r\n",
+      "16,0.1587737655716813\r\n",
+      "18,0.0170387173745394\r\n"
      ]
     }
    ],
    "source": [
     "!head my_submission.csv"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
