--- a/experiments.ipynb
+++ b/experiments.ipynb
@@ -1870,16 +1870,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "XGBClassifier(base_score=0.5, colsample_bylevel=1, colsample_bytree=1,\n",
+       "       gamma=0.05, learning_rate=0.1, max_delta_step=0, max_depth=3,\n",
+       "       min_child_weight=1, missing=None, n_estimators=100, nthread=-1,\n",
+       "       objective='binary:logistic', reg_alpha=0, reg_lambda=1,\n",
+       "       scale_pos_weight=1.0, seed=0, silent=True, subsample=1.0)"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "best_classifier.fit(X, y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1906,7 +1921,7 @@
        "        0.00439883,  0.01026393,  0.        ], dtype=float32)"
       ]
      },
-     "execution_count": 129,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1924,7 +1939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1942,7 +1957,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1987,7 +2002,8 @@
     "\n",
     "Tried but failed:\n",
     "* polynomial features\n",
-    "* feature selection"
+    "* feature selection\n",
+    "* oversampling"
    ]
   }
  ],
